Fixing some wraps, when absurd zoom is applied to the page

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
 
 .header-logo {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: 16px;
   font-size: 24px;
@@ -113,16 +114,12 @@ button.signup {
   font-size: 12px;
 }
 
-.info {
-  padding-top: 32px;
-  padding-bottom: 64px;
-}
-
 .info-cards {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   gap: 100px;
+  padding-bottom: 36px;
 }
 
 .info-card {
@@ -133,16 +130,21 @@ button.signup {
 }
 
 .info-title {
-  margin: auto;
+  display: flex;
+  justify-content: center;
+  padding: 36px 36px 0 36px;
+  margin-bottom: 32px;
+}
+
+.terminal-info {
+  flex: 0 1 auto;
   text-align: center;
   font-size: 36px;
   color: #f9faf8;
   font-weight: 900;
-  margin-bottom: 32px;
   font-family: monospace;
   background: #1f2937;
-  width: 600px;
-  padding: 8px;
+  padding: 0 16px;
   border: 4px solid #1f2937;
   border-radius: 16px;
 }
@@ -157,14 +159,6 @@ button.signup {
 span.emph {
   color: green;
   font-weight: 900;
-}
-
-.square {
-  width: 150px;
-  height: 150px;
-  border: 4px solid #3882f6;
-  border-radius: 16px;
-  margin-bottom: 8px;
 }
 
 .card-image {
